language saved via cookie and session-wide, general clean-up

--- a/src/main/webapp/moodTrend.xhtml
+++ b/src/main/webapp/moodTrend.xhtml
@@ -26,7 +26,7 @@
                             { id: 'arousal', label: 'Arousal', type: 'number' }                                     
                         ], 
                         rows: [
-                        #{dataTableConverter.moodStateListToDataString(userController.listMoodState)}
+                        #{moodStateListBean.getMoodStateListForChart()}
                         ]
                     };
                     
