--- a/src/main/webapp/response.xhtml
+++ b/src/main/webapp/response.xhtml
@@ -19,19 +19,19 @@
                 <h:panelGrid columns="2">
 
                     <h:column>ID</h:column>
-                    <h:column>#{moodController.moodState.idUser}</h:column>
+                    <h:column>#{moodStateBean.moodState.idUser}</h:column>
 
                     <h:column>Arousal</h:column>
-                    <h:column>#{moodController.moodState.arousal}</h:column>
+                    <h:column>#{moodStateBean.moodState.arousal}</h:column>
 
                     <h:column>Valence</h:column>
-                    <h:column>#{moodController.moodState.valence}</h:column>
+                    <h:column>#{moodStateBean.moodState.valence}</h:column>
 
                     <h:column>Motivation</h:column>
-                    <h:column>#{moodController.moodState.motivation}</h:column>
+                    <h:column>#{moodStateBean.moodState.motivation}</h:column>
 
                     <h:column>Sadness</h:column>
-                    <h:column>#{moodController.moodState.sadness}</h:column>
+                    <h:column>#{moodStateBean.moodState.sadness}</h:column>
                 </h:panelGrid>
 
                 <p></p>
