--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -19,6 +20,16 @@
 
         <main role="main" class="container">
             <div class="jumbotron mt-2">
+                #{sessionBean.setContextLocale()}
+                <h:form>
+                    <h:selectOneMenu value="#{sessionBean.localeCode}" onchange="submit()"
+                            valueChangeListener="#{sessionBean.localeChanged}">
+                            <f:selectItems value="#{sessionBean.countriesInMap}" 
+                                           class="form-control s-1"/> 
+                    </h:selectOneMenu>
+
+                </h:form>
+                
                 <ui:insert name="main"></ui:insert>
             </div>
         </main>
